PN-1871: add getPaymentInfo before return notificationDetail (#150)
* PN-1871: add getPaymentInfo before return notificationDetail

* PN-1871: add client exception mngt

* PN-1871: add test after review

* PN-1871: fix limit days cases and add test

* PN-1871: mv log after review